Fixed Navbar alignment and Footer Section

--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ nav a:hover {
   .header-right-2 {
     font-size: 20px;
     padding-right: 10px;
+    margin-bottom: 10px;
   }
 
   #header-paragraph-1 {
